<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_input"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/cityValueET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/btn_view_weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_view_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_weather_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_input" >

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="18 June, 2019 1:13 PM" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_time"
                tools:text="33" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_celcius"
                android:textSize="35sp"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toEndOf="@id/tv_temperature"
                app:layout_constraintTop_toTopOf="@id/tv_temperature" />

            <TextView
                android:id="@+id/tv_city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                tools:text="Dhaka, BD" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="266dp" />

            <ImageView
                android:id="@+id/iv_weather_condition"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="weather condition"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/tv_temperature"
                tools:src="@drawable/haze"
                app:tint="@color/teal_200" />

            <TextView
                android:id="@+id/tv_weather_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/iv_weather_condition"
                tools:text="broken cloud" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_weather_additional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_weather_basic">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_value_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />

            <TextView
                android:id="@+id/tv_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toEndOf="@id/guideline_value_start"
                app:layout_constraintTop_toTopOf="@+id/tv_humidity_label"
                tools:text="70%" />

            <TextView
                android:id="@+id/tv_pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/pressure"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity_label" />

            <TextView
                android:id="@+id/tv_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toStartOf="@id/guideline_value_start"
                app:layout_constraintTop_toTopOf="@+id/tv_pressure_label"
                tools:text="1001 mBar" />

            <TextView
                android:id="@+id/tv_visibility_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/teal_200"
                android:text="@string/visibility"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pressure_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_sunset_sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_sunrise_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunrise"
                android:textColor="@color/teal_200"
                app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_sunrise"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginStart="36dp"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintEnd_toStartOf="@id/iv_sunset"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_label" />

            <TextView
                android:id="@+id/tv_sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/teal_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunrise"
                tools:text="5:11 AM" />

            <TextView
                android:id="@+id/tv_sunset_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunset"
                android:textColor="@color/teal_200"
                app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                app:layout_constraintStart_toStartOf="@id/iv_sunset"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_sunset"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginEnd="36dp"
                android:src="@drawable/ic_sunset"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_sunrise"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunset_label" />

            <TextView
                android:id="@+id/tv_sunset_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/teal_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                app:layout_constraintStart_toStartOf="@id/iv_sunset"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunset"
                tools:text="6:47 PM" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Try Again"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/output_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="layout_weather_basic,layout_weather_additional,layout_sunset_sunrise"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
